# ELF-AV

./: CMakeLists.txt  README.md
.github/workflows/: generate-sln.yml  windows-build.yml
build_vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  av_research.sln  av_research.vcxproj  av_research.vcxproj.filters
include/core/: config.h  logger.h  security.h  service.h  utils.h
include/scan/: canary.h  credential_monitor.h  dns_monitor.h  driver_monitor.h  hosts_monitor.h  lsass_monitor.h  net_monitor.h  persistence_monitor.h  process_monitor.h  protection.h  registry_monitor.h  removable_monitor.h  scan_utils.h  scanner.h  script_heuristics.h  system_tamper.h  task_monitor.h  telemetry.h  watcher.h
include/ui/: notifier.h
src/app/: main.cpp
src/core/: config.cpp  logger.cpp  security.cpp  service.cpp  utils.cpp
src/scan/: canary.cpp  credential_monitor.cpp  dns_monitor.cpp  driver_monitor.cpp  hosts_monitor.cpp  lsass_monitor.cpp  net_monitor.cpp  persistence_monitor.cpp  process_monitor.cpp  protection.cpp  registry_monitor.cpp  removable_monitor.cpp  scan_utils.cpp  scanner.cpp  script_heuristics.cpp  system_tamper.cpp  task_monitor.cpp  telemetry.cpp  watcher.cpp
src/ui/: notifier.cpp
tools/: gen_vs2022.ps1  install.ps1  seal_sigs.cpp  sign_test.ps1  vm_setup_win10.ps1
